--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -32,6 +32,22 @@
           <label for="genres">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link, autofocus = true) }}
         </div>
+        <div class="form-group">
+        <label for="website">Website</label>
+        {{ form.website(class_ = 'form-control', placeholder='http://', id=form.website, autofocus = true) }}
+      </div>
+      <div class="form-group">
+      <label for="image_link">Image</label>
+      {{ form.image_link(class_ = 'form-control', placeholder='http://', id=form.image_link, autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="seeking_venue">Looking for a venue?</label>
+        {{ form.seeking_venue(class_ = 'form-control',  id=form.seeking_venue, autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="seeking_description">Description of venue are you looking for?</label>
+        {{ form.seeking_description(class_ = 'form-control', id=form.seeking_description, autofocus = true) }}
+      </div>
       <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
